# YOGIBOT

./: .env.example  .gitignore  CHANGES.md  PIPELINE.md  ROS2_SLAM_관제_DB_연계_명세서.docx  TurtleBot3_Waffle_JSON_저장명세서.docx  index.html  package-lock.json  package.json
map/: map.pgm  map.yaml
server/: README.md  main.py  mosquitto.conf  mqtt_ingest.py  requirements.txt  storage.py  waypoints.py
src/: App.jsx  api.js  main.jsx
ubuntu_ros2/: README.md  yogibot_gui.py
ubuntu_ros2/yogibot_bridge/: package.xml  requirements.txt  setup.cfg  setup.py
ubuntu_ros2/yogibot_bridge/launch/: bringup.launch.py
ubuntu_ros2/yogibot_bridge/yogibot_bridge/: mqtt_bridge.py  robot_simulator.py
